Version 3.6.0     unreleased

	* Always use '/' internally for paths, even on the Windows platform.
	* Change the way archive filenames are generated to eliminate leading '-' characters.
	* Use UTF-8 encoding for log files on disk to avoid problems with unusual filenames.

Version 3.5.4     17 Jan 2021

	* Fix a couple of links in docs/index.rst (cut-and-paste error).

Version 3.5.3     17 Jan 2021

	* Move to newer build dependencies (Black, isort, etc.).
	* Make adjustments to code formatting to match new Black version.
	* Force docs/requirements.txt to have UNIX line endings
	* Convert to PEP 440 convention for Git tags (i.e. "v3.5.3").
	* Standardize and improve badges in markdown, so they are all links.
	* Simplify pylint configuration and use "-j 0" to speed it up.

Version 3.5.2     14 Jan 2021

	* Improve debug output for pre/post action hooks.

Version 3.5.1     30 Dec 2020

	* Adjust .gitattributes to force UNIX line endings, for compatibility.

Version 3.5.0     30 Dec 2020

	* Changes to support the Windows platform, for the first time since 3.0.1.
	* Minor tweaks to the codebase to make the PyCharm code inspector happy.

Version 3.4.1     20 Dec 2020

	* Fix Python dependencies to work with Python 3.9.1 and not just 3.9.0.

Version 3.4.0     07 Nov 2020

	* Add a new -u/--uploadOnly option to cback3-amazons3-sync.

Version 3.3.4     29 Oct 2020

	* Update manual's copyright to reflect reStructuredText, not Docbook XML.
	* Fix typos (misspellings) discovered in manpages by Debian's Lintian.
	* Fix bug in "run release" that resulted in nonsensical 3.3.3 release.

Version 3.3.2     26 Oct 2020

	* Fix obsolete GitHub URL in several places.

Version 3.3.1     25 Oct 2020

	* Minor adjustments to PyPI package documentation.
	* Execute 'sudo -v' prior to running full test suite.
	* Fix release process to work consistently across platforms.

Version 3.3.0     25 Oct 2020

	* Convert to modern Python packaging based on Poetry.