@@ -42,6 +42,7 @@ pre-commit = "^2.2.0"
 black = "^20.8b1"
 isort = "^5.0.0"
 sphinx-autoapi = "^1.2.1"
+safety = "^1.10.3"
 
 [tool.black]
 line-length = 132
