@@ -28,5 +28,10 @@ Switch ($command)
       Write-Output "Running pylint checks..." 
       poetry run pylint -j 0 src/CedarBackup3
     }
+
+    safety {
+      Write-Output "Running safety checks..." 
+      poetry run safety check
+    }
 }
 
