@@ -3,6 +3,7 @@ Version 3.6.0     unreleased
 	* Always use '/' internally for paths, even on the Windows platform.
 	* Change the way archive filenames are generated to eliminate leading '-' characters.
 	* Use UTF-8 encoding for log files on disk to avoid problems with unusual filenames.
+	* Update build process to include security scans using Safety.
 
 Version 3.5.4     17 Jan 2021
 
